[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ledgermem"
version = "0.1.0"
description = "Python SDK for LedgerMem Memory — long-term memory infrastructure for AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "LedgerMem", email = "founders@proofly.dev" }]
keywords = ["memory", "llm", "agents", "rag", "vector", "longmemeval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.32",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://proofly.dev"
Documentation = "https://proofly.dev/docs"
Repository = "https://github.com/ledgermem/ledgermem-python"
Issues = "https://github.com/ledgermem/ledgermem-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ledgermem"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
