[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getmnemo"
version = "0.1.0"
description = "Python SDK for Mnemo Memory — long-term memory infrastructure for AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Mnemo", email = "founders@getmnemo.xyz" }]
keywords = ["memory", "llm", "agents", "rag", "vector", "longmemeval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "pydantic>=2.7,<3.0",
  "typing-extensions>=4.10",
  # Lets pydantic v2 evaluate `X | Y` style annotations on Python 3.9
  # (Pydantic falls back to it automatically when present).
  'eval-type-backport>=0.2; python_version<"3.10"',
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-httpx>=0.32",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.urls]
Homepage = "https://getmnemo.xyz"
Documentation = "https://getmnemo.xyz/docs"
Repository = "https://github.com/getmnemo/getmnemo-python"
Issues = "https://github.com/getmnemo/getmnemo-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/getmnemo"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
